# man-dont-get-angry

./: CMakeLists.txt  main.cpp
Include/: Any.hpp  Board.hpp  BoardPrinter.hpp  Dispatcher.hpp  Event.hpp  FieldId.hpp  FieldType.hpp  Fsm.hpp  GetBoardMessage.hpp  IBoard.hpp  IDispatcher.hpp  IState.hpp  Message.hpp  MessageInterest.hpp  ObserverPtr.hpp  PlayerId.hpp  State.hpp  StrongTypedef.hpp  TypeErasuredMessage.hpp
Tests/: DispatcherTestSuite.cpp  EventTestSuite.cpp  StateTestSuite.cpp  TestTestSuite.cpp
